--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "connect": "1.8.5",
     "express": "2.5.2",
     "jade": "0.20.0",
-    "socket.io": "0.8.7"
+    "socket.io": "0.8.7",
+    "coffee-script": "*",
+    "nap": "0.6.2",
+    "less": "*",
+    "nconf": "0.6.4",
+    "pstrscan": "0.1.3"
   },
   "devDependencies": {
     "vows": "0.5.x",
-	"mocha": "*",
-	"should": "*"
+	  "mocha": "*",
+	  "should": "*"
   },
   "engine": "node >= 0.6.6"
 }
